# webcam_ai

./: .gitignore  README.md  camera_service.py  main.py  motion_trigger.py  pyproject.toml
src/webcam_ai/: behavioral_worker.py  camera_service.py  detection_worker.py  main.py  replay_behavior.py  replay_detection.py
